# Magazine

./: CMakeLists.txt  README.md  commodity.cpp  commodity.h  dry.cpp  dry.h  extra_vector.cpp  extra_vector.h  helper.h  liquid.cpp  liquid.h  magazine.cpp  magazine.h  magazine_conv.cpp  magazine_conv.h  main.cpp  myVector.h  pallet_jack.cpp  pallet_jack.h  product.cpp  product.h  stdin.txt
